tests/idris2/error/perror030/LoggingParse.idr
import Data.Vect

%logging "elab" 1

[Named] {n : Nat} -> Show (Vect n a) where
  show x = "whatever"
